Commit to master

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<link rel="stylesheet" type="text/css" href="http://surasak.ece.engr.tu.ac.th/demo/assets/css/bootstrap.css" >
-	<link rel="stylesheet" type="text/css" href="http://surasak.ece.engr.tu.ac.th/demo/assets/css/main.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css" >
+	<link rel="stylesheet" type="text/css" href="assets/css/main.css">
 </head>
 
 <body>
@@ -90,10 +90,10 @@
 		</div>
 	</section>
 
-	<script type="text/javascript" src="http://surasak.ece.engr.tu.ac.th/demo/assets/js/jquery-3.1.1.min.js"></script>
-	<script type="text/javascript" src="http://surasak.ece.engr.tu.ac.th/demo/assets/js/tether.min.js"></script>
-	<script type="text/javascript" src="http://surasak.ece.engr.tu.ac.th/demo/assets/js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="http://surasak.ece.engr.tu.ac.th/demo/assets/js/merged.min.js"></script>
+	<script type="text/javascript" src="assets/js/jquery-3.1.1.min.js"></script>
+	<script type="text/javascript" src="assets/js/tether.min.js"></script>
+	<script type="text/javascript" src="assets/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="assets/js/merged.min.js"></script>
 	<script type="text/javascript" src="assets/js/main.js"></script>
 </body>
 </html>
